kube/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: blog
        image: blog
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: regcred
