kube/blog/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: blog-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: blog.tomarrell.com
      http:
        paths:
          - backend:
              serviceName: blog-service
              servicePort: 80
